# mhn-ai-agent-memory

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.cursor/: mcp.json.example
.cursor-plugin/: plugin.json
.cursor-plugin/commands/: hopfield-mcp-setup.md
.cursor-plugin/skills/mhn-project-working-memory/: SKILL.md
.cursor/skills/mhn-project-working-memory/: SKILL.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: repulsive_benchmark.py  repulsive_benchmark_v2.py
docs/: guide-hopfield-memory-with-llms.md  index.html
docs/research/self-reconfiguring-models/: README.md  glossary.md  literature-matrix.md
docs/research/self-reconfiguring-models/raw-search/: self-reconfiguring-models-search.json  self-reconfiguring-models-search2.json
examples/: agent_memory.py  basic_usage.py  contradiction_check.py  tiered_storage.py
mcp-server/: README.md  pyproject.toml  server.py
src/hopfield_memory/: __init__.py  contradiction.py  encoders.py  memory.py  multihop.py  network.py  presets.py  repulsive.py  tiered.py
tests/: test_features.py  test_network.py  test_repulsive.py
